# Haskell-etc

./: .brittany.yml  .dir-locals.el  .ghci  .gitignore  .hlint.yml  .tasty-rerun-log  .travis.yml  HLint.hs  Makefile  README.md  configtool.cabal  etc-spec.cabal  etc.cabal  stack.yaml  todo.org
.circleci/: config.yml
etc/: CHANGELOG.md  LICENSE  README.md  etc.cabal  package.yaml
etc-1/: todo.org
etc-1/src/System/: Etc.hs
etc-1/src/System/Etc/Internal/: Prelude.hs  Spec.hs
etc-1/test/fixtures/: one.json  spec.json  two.json
etc-cli/: etc-cli.cabal  package.yaml
etc-cli/src/Etc/: Cli.hs
etc-cli/src/Etc/Internal/: Cli.hs
etc-cli/src/Etc/Internal/Cli/: Common.hs  Error.hs  Parser.hs  Plain.hs  Types.hs
etc-cli/test/: TestSuite.hs
etc-cli/test/Etc/Cli/: CommandSpec.hs  PlainSpec.hs
etc-command-example/: README.md  etc-command-example.cabal
etc-command-example/resources/: config.yaml  spec.yaml
etc-command-example/src/: Main.hs
etc-legacy/: CHANGELOG.md  etc.cabal
etc-legacy/test/: TestSuite.hs
etc-legacy/test/System/Etc/: ConfigTest.hs  SpecTest.hs
etc-legacy/test/System/Etc/Resolver/: EnvTest.hs
etc-legacy/test/fixtures/: config.spec.invalid.yaml  config.spec.yaml
etc-plain-example/: README.md  etc-plain-example.cabal
etc-plain-example/resources/: config.yaml
etc-plain-example/src/: Main.hs
etc-spec/: .ghci  .tasty-rerun-log  Makefile  etc-spec.cabal  package.yaml
etc-spec/examples/command/resources/: spec.json
etc-spec/src/: Etc.hs
etc-spec/src/Etc/: Config.hs  Renderer.hs  Resolver.hs  Spec.hs  Types.hs
etc-spec/src/Etc/Internal/: Config.hs  CustomType.hs  FileFormat.hs  Printer.hs  Renderer.hs  Resolver.hs  Types.hs
etc-spec/src/Etc/Internal/Config/: TH.hs
etc-spec/src/Etc/Internal/Resolver/: Cli.hs  Default.hs  Env.hs  File.hs  Fold.hs  Types.hs
etc-spec/src/Etc/Internal/Resolver/Cli/: Command.hs  Common.hs  Plain.hs
etc-spec/src/Etc/Internal/Resolver/Env/: Error.hs  Types.hs
etc-spec/src/Etc/Internal/Resolver/File/: Error.hs  Types.hs
etc-spec/src/Etc/Internal/Spec/: Error.hs  Fold.hs  JSON.hs  Parser.hs  Serializer.hs  Types.hs  YAML.hs
etc-spec/src/Etc/Resolver/: Cli.hs  Default.hs  Env.hs  File.hs
etc-spec/src/Etc/Resolver/Cli/: Command.hs  Common.hs  Plain.hs
etc-spec/src/Etc/Resolver/Internal/: File.hs  Types.hs
etc-spec/src/Etc/Resolver/Internal/File/: Error.hs  Types.hs
etc-spec/src/Etc/Spec/: JSON.hs  Types.hs  YAML.hs
etc-spec/src/Etc/Spec/Internal/: Error.hs  ErrorRender.hs  Parser.hs  Serializer.hs  Types.hs
etc-spec/test/: TestSuite.hs
etc-spec/test/Etc/: FileFormatSpec.hs  Generators.hs  SpecSpec.hs  SpecTest.hs
etc-spec/test/Etc/Resolver/: CliTest.hs  DefaultTest.hs  EnvTest.hs  FileSpec.hs  FileTest.hs
etc-spec/test/Etc/Resolver/Cli/: CommandTest.hs  PlainTest.hs
etc-spec/test/fixtures/: config.yml  config1.json  config1.yaml  config2.json  config_env.json
etc/src/: Etc.hs
etc/src/Etc/: Resolver.hs  Spec.hs
etc/src/Etc/Internal/: Config.hs  CustomType.hs  FileFormat.hs  Renderer.hs  Resolver.hs
etc/src/Etc/Internal/Config/: TH.hs
etc/src/Etc/Internal/Resolver/: File.hs  Fold.hs
etc/src/Etc/Internal/Spec/: Parser.hs  Serializer.hs  Types.hs
etc/src/System/: Etc.hs
etc/src/System/Etc/: Spec.hs
etc/src/System/Etc/Internal/: Config.hs  Errors.hs  Printer.hs  (+1 more)
etc/test/: TestSuite.hs
etc/test/Etc/: CustomTypeSpec.hs  FileFormatSpec.hs
etc/test/Etc/Resolver/: FileSpec.hs
etc/test/System/Etc/: ConfigTest.hs  SpecTest.hs
etc/test/fixtures/: config.env.json  config.foo  config.null.json  config1.json  config1.yaml  config_wrong_type.json
example/: Main.hs
example/resources/: spec.json
examples/command/: Main.hs
examples/etc-command-example/: etc-command-example.cabal
examples/etc-command-example/resources/: spec.yaml
examples/etc-command-example/src/: Main.hs
examples/etc-compile-time-spec-check-example/: etc-compile-time-spec-check-example.cabal
examples/etc-compile-time-spec-check-example/resources/: spec.yaml
examples/etc-compile-time-spec-check-example/src/: Main.hs  Types.hs
examples/etc-embedded-config-example/: Makefile  README.md  etc-embedded-config-example.cabal
examples/etc-embedded-config-example/resources/: spec.yaml
examples/etc-embedded-config-example/src/: Config.tpl.hs  Main.hs
examples/etc-plain-example/: etc-plain-example.cabal
examples/etc-plain-example/resources/: env.yaml  spec.yaml
examples/etc-plain-example/src/: Main.hs
examples/etc-spec-errors-example/: README.md  etc-spec-errors-example.cabal  package.yaml
examples/etc-spec-errors-example/resources/: spec.json  spec.yaml  spec1.json  spec1.yaml
examples/etc-spec-errors-example/src/: Main.hs  Types.hs
examples/opt-commands/: Main.hs
examples/plain/: Main.hs
examples/plain/resources/: spec.json
examples/simple/: Main.hs
examples/simple/resources/: spec.json
libraries/etc/: CHANGELOG.md  etc.cabal
libraries/etc/src/System/: Etc.hs
libraries/etc/test/: TestSuite.hs
libraries/etc/test/fixtures/: config.json  config.spec.yaml  config.yaml
make/: sdist.make  tools.make
src/: Lib.hs  Tmp.hs
src/Etc/: Spec.hs
src/Etc/Internal/: Config.hs
src/Etc/Internal/Resolver/: Cli.hs  Default.hs  Env.hs  File.hs
src/Etc/Internal/Spec/: JSON.hs  Types.hs
src/System/: Etc.hs
src/System/Etc/: Spec.hs
src/System/Etc/Internal/: File.hs  Printer.hs  Spec.hs  Types.hs
src/UB/: Config.hs  Prelude.hs
src/UB/Config/Internal/: File.hs  Plain.hs  Printer.hs  Resolver.hs  Spec.hs  Types.hs  Unresolved.hs
src/UB/Internal/: Types.hs
src/UB/Internal/Config/: Resolver.hs  Unresolved.hs
src/UB/Lens/: EDN.hs
test/: TestSuite.hs
test/Etc/: SpecTest.hs
test/Etc/Resolver/: CliTest.hs  EnvTest.hs  FileTest.hs
test/Etc/Resolver/Cli/: CommandTest.hs  PlainTest.hs
test/System/: EtcTest.hs
test/System/Etc/: SpecTest.hs
test/System/Etc/Resolver/: DefaultTest.hs  EnvTest.hs  FileTest.hs
test/UB/: ConfigTest.hs
test/UB/Internal/Config/: UnresolvedTests.hs
test/UB/Test/: Util.hs
test/fixtures/: spec.json  spec.plain.json  two.json
(+59 files in other folders)
