name:                configtool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/configtool#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UB.Config
                       , UB.Prelude
  other-modules:       UB.Config.Internal.Types
                       , UB.Config.Internal.Unresolved
                       , UB.Config.Internal.Spec
                       , UB.Config.Internal.Plain
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , containers
                       , protolude
                       , exceptions
                       , aeson
                       , unordered-containers
                       , vector
                       , text
                       , lens

  default-language:    Haskell2010

-- executable configtool-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , configtool
--   default-language:    Haskell2010

test-suite configtool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  build-depends:       base
                     , protolude
                     , bytestring
                     , aeson
                     , text
                     , configtool
                     , containers
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/configtool
