name:                etc
version:             0.0.0.0
synopsis:            Configuration library for Haskell
description:         Please see README.md
homepage:            https://github.com/roman/Haskell-etc
license:             BSD3
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
copyright:           2016 Roman Gonzalez
category:            Configuration, System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Etc
  other-modules:       System.Etc.Internal.Types
                       , System.Etc.Internal.Spec
                       , System.Etc.Internal.Resolver.EnvVar
                       , System.Etc.Internal.Resolver.OptParse
                       , System.Etc.Internal.File
                       , System.Etc.Internal.Printer
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , containers
                       , ub-prelude
                       , exceptions
                       , directory
                       , ansi-wl-pprint
                       , aeson
                       , unordered-containers
                       , optparse-applicative
                       , vector
                       , text
                       , lens

  ghc-options:         -Wall
  default-language:    Haskell2010

executable etc-example
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ub-prelude
                     , etc
                     , optparse-applicative
                     , directory
  default-language:    Haskell2010

test-suite etc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  build-depends:       base
                     , ub-prelude
                     , bytestring
                     , aeson
                     , text
                     , etc
                     , containers
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roman/Haskell-etc
