name:                etc
version:             0.0.0.0
synopsis:            Configuration library for Haskell
description:         Please see README.md
homepage:            https://github.com/roman/Haskell-etc
license:             BSD3
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
copyright:           2016 Roman Gonzalez
category:            Configuration, System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Etc
  other-modules:       System.Etc.Internal.Types
                       , System.Etc.Internal.Spec
                       , System.Etc.Internal.Resolver.EnvVar
                       , System.Etc.Internal.Resolver.OptParse
                       , System.Etc.Internal.Resolver.OptParse.Common
                       , System.Etc.Internal.Resolver.OptParse.Command
                       , System.Etc.Internal.Resolver.OptParse.Plain
                       , System.Etc.Internal.Resolver.File
                       , System.Etc.Internal.Prelude
                       , System.Etc.Internal.Printer
  build-depends:       aeson
                     , ansi-wl-pprint
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , hashable
                     , lens
                     , optparse-applicative
                     , text
                     , protolude
                     , unordered-containers
                     , vector

  ghc-options:         -Wall
  default-language:    Haskell2010

executable etc-plain-example
  hs-source-dirs:      examples/plain
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , protolude
                     , aeson
                     , directory
                     , text
                     , etc
                     , hashable
                     , optparse-applicative
  default-language:    Haskell2010

executable etc-command-example
  hs-source-dirs:      examples/command
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , protolude
                     , aeson
                     , directory
                     , text
                     , etc
                     , hashable
                     , optparse-applicative
  default-language:    Haskell2010

test-suite etc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  other-modules:       System.EtcTest
  build-depends:       base
                     , protolude
                     , bytestring
                     , aeson
                     , text
                     , etc
                     , containers
                     , tasty
                     , tasty-hunit
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roman/Haskell-etc
