name:                etc-spec
version:             0.0.0.0
synopsis:            Configuration library for Haskell
description:         Please see README.md
homepage:            https://gitlab.com/romanandreg/Haskell-etc
license:             BSD3
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
copyright:           2017 Roman Gonzalez
category:            Configuration, System
build-type:          Simple
-- extra-source-files:
data-files:          test/fixtures/config.spec.yaml
cabal-version:       >=1.10

Flag Yaml
  Description: Include support to parse YAML files
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Etc.Spec.JSON
                     , Etc.Spec.Types
                     , Etc
                     , Etc.Types
                     , Etc.Resolver.File

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , hashable
                     , text
                     , protolude
                     , unordered-containers
                     , vector

  ghc-options:         -Wall
  default-language:    Haskell2010

  if flag(yaml)
    exposed-modules:   Etc.Spec.YAML
    build-depends:     yaml

test-suite etc-spec-testsuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  build-depends:       base >= 4.7 && <5
                     , protolude
                     , aeson
                     , bytestring
                     , text
                     , containers
                     , yaml
                     , unordered-containers

                     , tasty
                     , tasty-hunit
                     , tasty-rerun

                     , etc-spec

  other-modules:       Paths_etc_spec,
                       Etc.SpecTest,
                       Etc.Resolver.FileTest

  if flag(yaml)
    build-depends:     yaml

  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/romanandreg/Haskell-etc
