name:                etc-compile-time-spec-check-example
version:             0.0.0.0
synopsis:            Example of Etc using Command CLI
description:         Please see README.md
homepage:            https://github.com/roman/Haskell-etc
license:             BSD3
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
copyright:           2016 Roman Gonzalez
category:            Configuration, System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable etc-compile-time-spec-check-example
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , aeson >=0.11
    , text >=1.2
    , rio >=0.0.1.0
    , unordered-containers >=0.2
    , directory >=1.2
    , hashable >=1.2
    , etc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roman/Haskell-etc