name:                etc-embedded-config-example
version:             0.0.0.0
synopsis:            Example of Etc using Command CLI
description:         Please see README.md
homepage:            https://github.com/roman/Haskell-etc
license:             BSD3
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
copyright:           2016 Roman Gonzalez
category:            Configuration, System
build-type:          Simple
cabal-version:       >=1.10
data-dir: resources
data-files:
    spec.yaml

executable etc-embedded-config-example
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , aeson >=0.11
    , base64-bytestring >= 1.0
    , text >=1.2
    , protolude >=0.1
    , file-embed >=0.0
    , unordered-containers >=0.2
    , directory >=1.2
    , hashable >=1.2
    , etc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roman/Haskell-etc